cmake_minimum_required(VERSION 3.6)
project(cpp-workshop-fall-18)

set(CMAKE_CXX_STANDARD 11)

add_executable(01-hello-world 01-hello-world.cpp)
add_executable(02-getting-input 02-getting-input.cpp)
add_executable(03-classes-and-functions 03-classes-and-functions.cpp)
add_executable(04-pointers-and-references 04-pointers-and-references.cpp)
add_executable(05-inheritance 05-inheritance.cpp)
add_executable(06-polymorphism 06-polymorphism.cpp)
add_executable(07-templates 07-templates.cpp)
add_executable(08-lambdas 08-lambdas.cpp)
